feat: gRPC 기본 환경 구성 추가
25-07-25
1. gRPC 기본 환경 구성 추가
2. 테스트는 미완료

#S13P11C102-141

--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
+server:
+  port: 8080
+
+grpc:
+  server:
+    port: 50051
+
 spring:
   application:
     name: linky
@@ -25,3 +32,4 @@ spring:
 
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+
