--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 8080
-
 grpc:
   server:
     port: 50051
@@ -26,10 +23,9 @@ spring:
       org.springframework.web: INFO
       com.example: DEBUG
 
-  mybatis:
-    mapper-locations: classpath:/mappers/**/*.xml
-    type-aliases-package: com.link.api.*.entity
-
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
 
+mybatis:
+  mapper-locations: classpath:/mappers/**/*.xml
+  type-aliases-package: com.linky.api.*.entity
