--- a/server/build.gradle
+++ b/server/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'io.grpc:grpc-stub:1.58.0'
     implementation 'io.grpc:grpc-netty-shaded:1.58.0'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
