--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -26,6 +26,18 @@ spring:
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
 
+  cloud:
+    aws:
+      s3:
+        bucket: ${AWS_S3_BUCKET}
+      region:
+        static: ${AWS_REGION}
+      credentials:
+        access-key: ${AWS_ACCESS_KEY}
+        secret-key: ${AWS_SECRET_KEY}
+
+
+
 mybatis:
   mapper-locations: classpath:/mappers/**/*.xml
   type-aliases-package: com.linky.api.*.entity
