--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -29,3 +29,7 @@ spring:
 mybatis:
   mapper-locations: classpath:/mappers/**/*.xml
   type-aliases-package: com.linky.api.*.entity
+
+sms:
+  api-key: ${SMS_API_KEY}
+  secret-key: ${SMS_SECRET_KEY}
