--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -35,8 +35,11 @@ spring:
       credentials:
         access-key: ${AWS_ACCESS_KEY}
         secret-key: ${AWS_SECRET_KEY}
-
-
+  data:
+    redis:
+      password: 1234
+      host: localhost
+      port: 6379
 
 mybatis:
   mapper-locations: classpath:/mappers/**/*.xml
