--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -41,6 +41,12 @@ spring:
       host: localhost
       port: 6379
 
+  mqtt:
+    broker-url: tcp://localhost:1883
+    client-id: linky-server
+    topic: linky/robot
+
+
 mybatis:
   mapper-locations: classpath:/mappers/**/*.xml
   type-aliases-package: com.linky.api.*.entity
