refactor: file domain change to REST
2025-07-31
1. gRPC 통신에서 REST 로 변경

--- a/apps/backend/src/main/resources/application.yaml
+++ b/apps/backend/src/main/resources/application.yaml
@@ -26,6 +26,13 @@ spring:
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
 
+  servlet:
+    multipart:
+      file-size-threshold: 10MB
+      location: ${user.home}/uploads
+      max-file-size: 10MB
+      max-request-size: 50MB
+
   cloud:
     aws:
       s3:
