chore: gitignore에 ros2 빌드 폴더 제외

--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,intellij,macos,node,git
+
+# Robotics
+apps/robotics/ros2_ws/build
+apps/robotics/ros2_ws/install
+apps/robotics/ros2_ws/log
+
