feat: ai chat gms 요청 로직 작성
2025-08-01
1. http 요청 관련 설정 추가
2. REST api 작성

--- a/apps/backend/build.gradle
+++ b/apps/backend/build.gradle
@@ -22,6 +22,12 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+    }
 }
 
 dependencies {
@@ -59,6 +65,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'net.nurigo:sdk:4.2.7'
+
+    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
+    implementation 'org.springframework.ai:spring-ai-openai'
 }
 
 protobuf { // 프로토콜 버퍼 관련 설정
