feat: Openvidu 를 사용해서 WebRTC 기능 구현
25-08-01
1. 백엔드에서 프론트의 토큰 발급 요청이 들어 올 시 EC2 서버의 openvidu 의 토큰을 발급받아 프론트로 전송하는 기능 구현

--- a/apps/backend/src/main/resources/application.yaml
+++ b/apps/backend/src/main/resources/application.yaml
@@ -66,3 +66,7 @@ mybatis:
 sms:
   api-key: ${SMS_API_KEY}
   secret-key: ${SMS_SECRET_KEY}
+
+openvidu:
+  url: http://i13c102.p.ssafy.io:4443
+  secret: 1234
