--- a/apps/backend/build.gradle
+++ b/apps/backend/build.gradle
@@ -22,6 +22,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -48,6 +49,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
     implementation 'org.springframework.integration:spring-integration-mqtt'
+    implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.28.0'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
