--- a/apps/frontend/web/administrator/package.json
+++ b/apps/frontend/web/administrator/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-apexcharts": "^1.8.0",
+    "vuetify": "^3.9.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
