--- a/apps/frontend/web/administrator/package.json
+++ b/apps/frontend/web/administrator/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-vue-devtools": "^8.0.0"
   }
 }
