--- a/apps/frontend/web/administrator/package.json
+++ b/apps/frontend/web/administrator/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "openvidu-browser": "^2.31.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue3-apexcharts": "^1.8.0",
