fix: webRTC 포트번호 변경으로 인한 수정
25-08-06
1. WebRTC 서버 포트 번호 변경으로 인한 yaml 파일 수정
2. 테스트 중

--- a/apps/backend/src/main/resources/application.yaml
+++ b/apps/backend/src/main/resources/application.yaml
@@ -78,5 +78,5 @@ sms:
   secret-key: ${SMS_SECRET_KEY}
 
 openvidu:
-  url: http://i13c102.p.ssafy.io:4443
-  secret: 1234
+  url: https://i13c102.p.ssafy.io:443
+  secret: linky1234
