refactor: MQTT 명령어 관련 수정
25-08-06
1. 로봇 통신 테스트 후, MQTT 명령어를 통일 시키기 위한 코드 리팩토링 진행
2. 테스트 완료

--- a/apps/backend/src/main/resources/application.yaml
+++ b/apps/backend/src/main/resources/application.yaml
@@ -55,7 +55,7 @@ spring:
       port: 6379
 
   mqtt:
-    broker-url: tcp://localhost:1883
+    broker-url: tcp://192.168.100.83:1883
     client-id: linky-server
     topic: linky/robot
 
