chore: backend object yaml 파일 디렉토리 변경
2025-08-07
1. mysql 디렉토리와 분리

--- a/apps/backend/k8s/app/deployment.yaml
+++ b/apps/backend/k8s/app/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         blue-green-no: "1"
     spec:
       nodeSelector:
-        kubernetes.io/hostname: k8s-master
+        kubernetes.io/hostname: k8s-worker1
       containers:
         - name: api-tester-2214-2
           image: parkheejun/linky-backend:1.0.0
