feat: backend server jenkinsfile 작성
2025-08-07
1. Jenkinsfile 작성

--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -23,6 +23,7 @@ pipeline {
         stage('소스파일 체크아웃') {
                     steps {
                         git branch: '/feature/deploy', url: 'https://lab.ssafy.com/s13-webmobile3-sub1/S13P11C102.git'
+                        credentialsId: 'gitlab-credentials'
                     }
         }
 
@@ -42,8 +43,7 @@ pipeline {
                     extensions: [[$class: 'SparseCheckoutPaths',
                                   sparseCheckoutPaths: [[path: "/apps/backend"]]]],
                     userRemoteConfigs: [[
-                        url: "${GITLAB_URL}",
-                        credentialsId: 'gitlab-credentials'
+                        url: "${GITLAB_URL}"
                     ]]
                 )
             }
