--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
     stages {
         stage('소스파일 체크아웃') {
                     steps {
-                        git branch: '/feature/deploy', url: 'https://lab.ssafy.com/s13-webmobile3-sub1/S13P11C102.git'
+                        git branch: 'feature/deploy', url: 'https://lab.ssafy.com/s13-webmobile3-sub1/S13P11C102.git'
                         credentialsId: 'gitlab-credentials'
                     }
         }
