--- a/apps/frontend/customer/package.json
+++ b/apps/frontend/customer/package.json
@@ -14,8 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
