feat: backend server jenkinsfile 작성
2025-08-07
1. Jenkinsfile 작성

--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -42,7 +42,8 @@ pipeline {
                     extensions: [[$class: 'SparseCheckoutPaths',
                                   sparseCheckoutPaths: [[path: "/apps/backend"]]]],
                     userRemoteConfigs: [[
-                        url: "${GITLAB_URL}"
+                        url: "${GITLAB_URL}",
+                        credentialsId: 'gitlab-credentials'
                     ]]
                 )
             }
