feat: backend server jenkinsfile 작성
2025-08-07
1. Jenkinsfile 작성

--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         stage('릴리즈파일 체크아웃') {
             steps {
                 git branch: 'feature/deploy',
-                    credentialsId: 'Gitlabs',
+                    credentialsId: 'gitlab-credentials',
                     url: "${GITLAB_URL}"
             }
         }
