--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
         stage('소스 빌드') {
             steps {
                 script {
+                    sh "cd apps/backend"
                     sh "chmod +x ./gradlew"
                     sh "./gradlew clean build --no-daemon"
                 }
