--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -1,4 +1,6 @@
 pipeline {
+    agent any
+
     agent {
         docker {
             image 'docker:28.3.3'
@@ -8,7 +10,7 @@ pipeline {
 
     tools {
         gradle 'gradle-9.0.0'
-        jdk 'jdk-21'
+        jdk 'jdk-17'
     }
 
     environment {
