feat: backend server jenkinsfile 작성
2025-08-07
1. Jenkinsfile 작성

--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -20,21 +20,6 @@ pipeline {
     }
 
     stages {
-        stage('Debug Environment') {
-                    steps {
-                        sh 'echo "Current container/environment:"'
-                        sh 'hostname'
-                        sh 'whoami'
-                        sh 'pwd'
-                        sh 'echo "JAVA_HOME: $JAVA_HOME"'
-                        sh 'echo "Available Java installations:"'
-                        sh 'ls -la /usr/lib/jvm/ || echo "No /usr/lib/jvm directory"'
-                        sh 'ls -la /opt/java/ || echo "No /opt/java directory"'
-                        sh 'which java'
-                        sh 'java -version'
-                    }
-                }
-
         stage('릴리즈파일 체크아웃') {
             steps {
                 git branch: 'feature/deploy',
@@ -46,6 +31,7 @@ pipeline {
         stage('소스 빌드') {
             steps {
                 script {
+                    sh 'apt-get update && apt-get install -y openjdk-17-jdk'
                     sh "chmod +x ./apps/backend/gradlew"
                     sh "./apps/backend/gradlew clean build --no-daemon"
                 }
