--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -1,30 +1,21 @@
-worker_processes  1;
+server {
+    listen 7080;
+    server_name localhost;
 
-events {
-    worker_connections  1024;
-}
+    root /usr/share/nginx/html;
+    index index.html;
 
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
-    server {
-        listen       80;
-        server_name  localhost;
-
-        location /rider/ {
-            alias /usr/share/nginx/html/;
-            index index.html index.htm;
-            try_files $uri $uri/ /rider/index.html;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
+    location /rider/ {
+        try_files $uri $uri/ /index.html;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+    
 }
