--- a/apps/frontend/rider/Dockerfile
+++ b/apps/frontend/rider/Dockerfile
@@ -7,6 +7,6 @@ RUN npm run build
 
 FROM nginx:stable-alpine AS production-stage
 COPY --from=build-stage /pubweb/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
