--- a/apps/frontend/rider/Dockerfile
+++ b/apps/frontend/rider/Dockerfile
@@ -7,6 +7,9 @@ RUN npm run build
 
 FROM nginx:stable-alpine AS production-stage
 COPY --from=build-stage /pubweb/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/default.conf
-EXPOSE 80
+
+# 올바른 Nginx 설정 파일 복사
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 7080
 CMD ["nginx", "-g", "daemon off;"]
