fix;: 도커파일, nginx 파일 삭제
25-08-07
1. Dockerfile 수정
2. nginx.conf 삭제

--- a/apps/frontend/rider/Dockerfile
+++ b/apps/frontend/rider/Dockerfile
@@ -1,3 +1,4 @@
+# Vue 앱 빌드만 수행
 FROM node:lts-alpine AS build-stage
 WORKDIR /pubweb
 COPY package*.json ./
@@ -5,11 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:stable-alpine AS production-stage
-COPY --from=build-stage /pubweb/dist /usr/share/nginx/html
-
-# 올바른 Nginx 설정 파일 복사
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 7080
-CMD ["nginx", "-g", "daemon off;"]
+# 정적 파일만 결과물로 남기는 스테이지
+FROM alpine:latest AS export-stage
+WORKDIR /dist
+COPY --from=build-stage /pubweb/dist .
