--- a/apps/frontend/rider/package.json
+++ b/apps/frontend/rider/package.json
@@ -11,14 +11,15 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
-    "vite": "^7.0.4",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.28.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "vite": "^7.0.4"
   },
   "keywords": [
     "vue",
