feat: frontend server jenkinsfile, dockerfile 생성
25-08-08
1. Jenkinsfile 작성
2. dockerfile 작성

--- a/apps/frontend/rider/Dockerfile
+++ b/apps/frontend/rider/Dockerfile
@@ -1,12 +1,2 @@
-# Vue 앱 빌드만 수행
-FROM node:lts-alpine AS build-stage
-WORKDIR /pubweb
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
-
-# 정적 파일만 결과물로 남기는 스테이지
-FROM alpine:latest AS export-stage
-WORKDIR /dist
-COPY --from=build-stage /pubweb/dist .
+FROM nginx:alpine
+COPY dist/ /usr/share/nginx/html
