--- a/apps/frontend/rider/Jenkinsfile
+++ b/apps/frontend/rider/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage('Checkout branch') {
             agent any
             steps {
-                git branch: "${GIT_BRANCH}", 
+                git 
                     credentialsId: "${GIT_CREDENTIALS_ID}",
                     url: "${GIT_URL}"
 
