fix: jenkins 문법 오류 수정
25-08-08
1. git 문법 오류 수정

--- a/apps/frontend/rider/Jenkinsfile
+++ b/apps/frontend/rider/Jenkinsfile
@@ -14,8 +14,7 @@ pipeline {
         stage('Checkout branch') {
             agent any
             steps {
-                git 
-                    credentialsId: "${GIT_CREDENTIALS_ID}",
+                git credentialsId: "${GIT_CREDENTIALS_ID}",
                     url: "${GIT_URL}"
 
                 sh 'echo "Checked out branch ${GIT_BRANCH} from ${GIT_URL}"'
