--- a/apps/frontend/rider/Dockerfile
+++ b/apps/frontend/rider/Dockerfile
@@ -1,2 +1,14 @@
-FROM nginx:alpine
-COPY dist/ /usr/share/nginx/html
+FROM node:lts-alpine AS builder
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
+FROM nginx:stable-alpine
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 7080
+CMD ["nginx", "-g", "daemon off;"]
