--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 7080;
     server_name localhost;
 
-    location / {
+    location /rider/ {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
