fix: nginx 오류 수정
25-08-08
1. '/' 로 들어오는 요청도 처리하도록 수정

--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -2,9 +2,14 @@ server {
     listen 7080;
     server_name localhost;
 
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+
     location /rider/ {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location / {
         try_files $uri $uri/ /index.html;
     }
 
