--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -6,6 +6,7 @@ server {
     index  index.html index.htm;
 
     location /rider/ {
+        alias /usr/share/nginx/html/;
         try_files $uri $uri/ /index.html;
     }
 
