fix: nginx alias 에 rider 추가
25-08-08
1. rider 추가해서 오류 해결

--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -2,14 +2,13 @@ server {
     listen 7080;
     server_name localhost;
 
-    root   /usr/share/nginx/html;
+    root   /usr/share/nginx/html/rider;;
     index  index.html index.htm;
 
     location /rider/ {
-        alias /usr/share/nginx/html/;
         try_files $uri $uri/ /index.html;
     }
-
+    
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
