--- a/apps/frontend/rider/Dockerfile
+++ b/apps/frontend/rider/Dockerfile
@@ -7,7 +7,7 @@ RUN npm run build
 
 FROM nginx:stable-alpine
 
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html/rider
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 7080
