fix: nginx 문법 오류 수정
25-08-08
1. 세미콜론 2개 있던거해결

--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 7080;
     server_name localhost;
 
-    root   /usr/share/nginx/html/rider;;
+    root   /usr/share/nginx/html/rider;
     index  index.html index.htm;
 
     location /rider/ {
