fix: root 를 상위 디렉토리로 지정, Vue 빌드 base
25-08-08
1. root 를 상위 디렉토리로 지정,

--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -2,11 +2,11 @@ server {
     listen 7080;
     server_name localhost;
 
-    root   /usr/share/nginx/html/rider;
-    index  index.html index.htm;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
     location /rider/ {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /rider/index.html;
     }
     
     error_page   500 502 503 504  /50x.html;
