fix: 이미지 오류 수정
25-08-08
1. 이미지 못 불러오는 거 alias 로 수정

--- a/apps/frontend/rider/nginx.conf
+++ b/apps/frontend/rider/nginx.conf
@@ -2,10 +2,8 @@ server {
     listen 7080;
     server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-
     location /rider/ {
+        alias /usr/share/nginx/html/rider/;
         try_files $uri $uri/ /rider/index.html;
     }
     
