--- a/apps/frontend/web/administrator/package.json
+++ b/apps/frontend/web/administrator/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "openvidu-browser": "^2.31.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue3-apexcharts": "^1.8.0",
