feat: PostgreSQL 연결을 위한 설정 25-08-07 1. application.yaml 의존성 추가 2. MySQL, PostgreSQL 두 개의 DB 사용을 위한 config 작성 3. MySQL, PostgreSQL 요청 분기를 위한 파일 구조 변경

--- a/apps/backend/src/main/resources/application.yaml
+++ b/apps/backend/src/main/resources/application.yaml
@@ -20,9 +20,9 @@ spring:
 
     postgres:
       driver-class-name: org.postgresql.Driver
-      url: ${POSTGRES_DB_URL:jdbc:postgresql://localhost:5432/linky_location}
-      username: ${POSTGRES_DB_USERNAME:linky}
-      password: ${POSTGRES_DB_PASSWORD:linky1234}
+      url: ${POSTGRES_DB_URL}
+      username: ${POSTGRES_DB_USERNAME}
+      password: ${POSTGRES_DB_PASSWORD}
 
   jpa:
     properties:
