--- a/apps/backend/k8s/mysql/mysql-configmap.yaml
+++ b/apps/backend/k8s/mysql/mysql-configmap.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: mysql
 data:
-  my.cnf: |
+  custom.cnf: |
     [mysqld]
     default-storage-engine=INNODB
     character-set-server=utf8mb4
