--- a/apps/frontend/Jenkinsfile
+++ b/apps/frontend/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
 
                 script {
                     CHANGED_FILES = sh(
-                        script: "git diff --name-only origin/${GIT_BRANCH} HEAD",
+                        script: "git diff --name-only ${GIT_BRANCH} HEAD",
                         returnStdout: true
                     ).trim()
                     sh "echo Changed files:\n${CHANGED_FILES}"
