--- a/apps/frontend/customer/package.json
+++ b/apps/frontend/customer/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
